# Mobile-Tools-frr

./: .gitmodules  LICENSE
IDA-Mobile/: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
IDA-Mobile/app/: build.gradle.kts  proguard-rules.pro
IDA-Mobile/app/src/main/: AndroidManifest.xml
IDA-Mobile/app/src/main/java/com/geeks/idamobile/: MainActivity.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/cfg/: CfgNode.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/disassembly/: InstructionLine.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/features/: FeatureRegistry.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/fileloader/: FileLoaderRepository.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/functions/: FunctionSymbol.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/hexviewer/: HexRow.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/nativebridge/: NativeBridge.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/strings/: StringEntry.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/ui/: IdaMobileApp.kt
IDA-Mobile/app/src/main/java/com/geeks/idamobile/viewmodels/: MainViewModel.kt
IDA-Mobile/app/src/main/java/com/skids/idamobile/: MainActivity.kt
IDA-Mobile/app/src/main/java/com/skids/idamobile/cfg/: CfgNode.kt
IDA-Mobile/app/src/main/java/com/skids/idamobile/decompiler/: Radare2DecompileReport.kt  Radare2DecompilerRepository.kt  Radare2Function.kt
IDA-Mobile/app/src/main/java/com/skids/idamobile/disassembly/: ApkAssemblyReport.kt  InstructionLine.kt  (+3 more)
IDA-Mobile/app/src/main/res/values/: strings.xml  themes.xml
IDA-Mobile/native/: CMakeLists.txt
IDA-Mobile/native/analysis/: analysis_stub.cpp
IDA-Mobile/native/cfg/: cfg_stub.cpp
IDA-Mobile/native/core/: core_version.cpp
IDA-Mobile/native/disassembler/: disassembler_stub.cpp
IDA-Mobile/native/include/analysis/: analysis_stub.h
IDA-Mobile/native/include/cfg/: cfg_stub.h
IDA-Mobile/native/include/core/: core_version.h
IDA-Mobile/native/include/disassembler/: disassembler_stub.h
IDA-Mobile/native/include/loader/: apk_inspector.h  file_loader.h
IDA-Mobile/native/include/memory/: memory_map.h
IDA-Mobile/native/jni/: jni_bridge.cpp
IDA-Mobile/native/loader/: apk_inspector.cpp  file_loader.cpp
IDA-Mobile/native/memory/: memory_map.cpp
IDA-Mobile/scripting/python/: README.md  analysis_tools.py
IDA-Mobile/scripts/: build_radare2_android.sh  install_radare2_asset.ps1  setup_third_party.ps1
(+23 files in other folders)
